# AI_Vtube

./: .gitignore  MIGRATION.md  PHASE1_SUMMARY.md  README.md  Requirements.txt  chatbot.py  main.py  pyproject.toml  requirements.txt  speech2text.py  text2speech.py  text_utils.py
.github/workflows/: ci.yml
src/ai_vtube/: __init__.py  chatbot.py  config.py  main.py  speech_to_text.py  text_to_speech.py  text_utils.py
tests/: test_chatbot.py  test_config.py  test_text_utils.py
