[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-vtube"
version = "0.2.0"
description = "ไพลิน (Pailin) – AI VTuber application with chatbot, STT and TTS"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0",
    "SpeechRecognition>=3.10.0",
    "pygame>=2.5.0",
    "gTTS>=2.3.2",
    "PyAudio>=0.2.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
ai-vtube = "ai_vtube.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
